--- a/wallet.ipynb
+++ b/wallet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6229db5b-5d89-44cb-b3ed-970ef91dc521",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cbecf472-a6d6-4fdf-9cfa-b1a1c3ff56fb",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "abb01bfa-f405-4e7b-87ba-036900dd8a15",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "918743ed-918e-4360-a161-11f3b03d0bbd",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "24e90fa7-48e4-4726-a96f-bd4302f04646",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "93b44aef-2785-4322-bd7a-e9ec53f9736a",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "089de723-5202-4483-a3cd-4f0020726acc",
    "metadata": {},
    "outputs": [],
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ac5c7344-f26d-41b7-85dd-942aeb35597a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<eth_account.signers.local.LocalAccount at 0x109eef3a0>"
+       "<eth_account.signers.local.LocalAccount at 0x10dea6ee0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "eec91fe6-996a-49c9-a7e1-ec8af66631bb",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "47aa8319-ec2d-4a92-bf1b-14d479814363",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2f0a47a8-ea0f-42e8-9b31-522441d6430f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9579a640-a93b-4c8c-8a26-2db4c37685a5",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7b6c1041-6e73-48ea-9941-01afbb7c91b1",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "'0x15D5eC9D3F67A42f1D56E205a79ae6931F50A431'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8c0d2596-0c2e-4be5-9886-1f21a1b264f6",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "'0xAB4A0C2ed939f32DE20E7118E23fddaF9739aCe0'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e993fd6d-1cc4-4920-a6c5-85788b74bc3d",
    "metadata": {},
    "outputs": [
@@ -237,13 +237,34 @@
        "'0x41f64Fa483B847a910f8455157B4d5778F158293'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "account_mnem1_btc.address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2985acd5-eaa5-488b-931b-7ab5aa9d8652",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HexBytes('0x5003d2ee8868bb5b0234fb4bd0f1820e26f878e502f0d688d182074a5dc21042')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "account_mnem1_btc.privateKey"
    ]
   },
   {
@@ -493,9 +514,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52ce10e1-7d97-447f-9c68-ee4b491e88e5",
+   "metadata": {},
+   "source": [
+    "##### CIDV1 (BASE32) - file- NFT1.PNG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e63e862-e193-42ae-b7c3-19c34ce09a5d",
+   "metadata": {},
+   "source": [
+    "#### bafybeicrpn4uamphmv3dxzxl3veovrfslb54de5xe5jh7dnpilrl4o56jq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "106594be-7c24-48fd-958a-3175ecbcf659",
+   "metadata": {},
+   "source": [
+    "#### ipfs://bafybeicrpn4uamphmv3dxzxl3veovrfslb54de5xe5jh7dnpilrl4o56jq"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ae5eea-66a7-4bfe-81db-7780f3b83376",
+   "id": "674d6264-ea0e-4934-b317-1893d787970f",
    "metadata": {},
    "outputs": [],
    "source": []
